--- a/src/pages/ajout/ajout.html
+++ b/src/pages/ajout/ajout.html
@@ -14,9 +14,10 @@
 
 
 <ion-content padding>
+
   <ion-item>
     <ion-label floating>Nom</ion-label>
-    <ion-input [(ngModel)]="article.name"></ion-input>
+    <ion-input [(ngModel)]="article.name" required></ion-input>
   </ion-item>
 
   <ion-item>
