--- a/src/pages/information/information.html
+++ b/src/pages/information/information.html
@@ -1,20 +1,13 @@
-<!--
-  Generated template for the InformationPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>informations</ion-title>
+    <ion-title>Information sur l'application</ion-title>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding>
-  <h2>Gestionnaire de liste de courses</h2>
-  <h5>Réalisé à l'aide de Ionic Framework.</h5>
-  <p>Sources disponible à l'adresse : </p>
+  <h2 padding text-uppercase text-center>Gestionnaire de liste de courses</h2>
+  <img src="assets/imgs/shopping-basket.svg"/>
+  <p text-center>Réalisé à l'aide de Ionic Framework (version 3.9). Sources disponible <a href="https://github.com/adrien-chinour/MesCourses">ici</a>.</p>
+  <p padding-top text-center><a href="https://adrienchinour.me">Site du développeur</a></p>
 </ion-content>
